# flashlight

./: .gitignore  CLAUDE.md  KNOWN_LIMITATIONS.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  test_loss_fixes.py  test_signatures.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  parity-check.yml  parity.yml  release.yml  security.yml
archive/pytorch-mlx-porting-docs/: 00-OVERVIEW.md
benchmarks/: __init__.py  __main__.py  benchmark_distributions.py  benchmark_signal.py  benchmark_suite.py
benchmarks/core/: __init__.py  comparison.py  config.py  memory.py  runner.py  timing.py
benchmarks/data/: __init__.py  benchmark_collate.py  benchmark_dataloader.py  benchmark_samplers.py  run_benchmarks.py
benchmarks/layers/: __init__.py  activation.py  attention.py  base.py  conv.py  embedding.py  linear.py  losses.py  normalization.py  padding.py  pooling.py  rnn.py
benchmarks/microbench/: __init__.py  autograd_gradients.py  autograd_overhead.py  before_after.py  layout.py  method_dispatch.py
benchmarks/models/: __init__.py  base.py  cnn.py  mlp.py  resnet.py  transformer.py
benchmarks/operators/: __init__.py  activations.py  arithmetic.py  base.py  comparison.py  convolution.py  fft.py  linalg.py  math_funcs.py  pooling.py  reductions.py  signal.py  special.py
benchmarks/optim/: __init__.py  benchmark_optimizers.py  run_benchmarks.py
benchmarks/output/: __init__.py  console.py  json_output.py
benchmarks/utils/: __init__.py  benchmark_checkpoint.py  benchmark_mobile_optimizer.py  benchmark_timer.py
docs/: index.md
docs/getting-started/: installation.md  migration.md  quickstart.md
docs/guide/: best-practices.md  nn.md  tensors.md  training.md
examples/models/: cnn.py  mlp.py  resnet.py  transformer.py
examples/training/: train_cifar10.py  train_mnist.py
flashlight/: __init__.py  amp.py  cuda.py  device.py  dtype.py  factories.py  fft.py  layout.py  linalg.py  random.py  serialization.py  special.py  tensor.py  view_ops.py
mlx_compat/: __init__.py  amp.py  dtype.py  factories.py  fft.py  layout.py  linalg.py  random.py  serialization.py  special.py  tensor.py  view_ops.py
parity_check/: __init__.py  __main__.py  config.py  runner.py
scripts/: compare_benchmarks.py  gen_api_docs.py
tests/: __init__.py  common_utils.py  test_lobpcg_parity.py  test_philox_parity.py  test_quantization.py  test_scaffolding.py  test_sparse.py
(+515 files in other folders)
